--- a/interfaceWeb/index.html
+++ b/interfaceWeb/index.html
@@ -12,6 +12,7 @@
     <ul>
       <li><a href = "toute_la_bdd.php">Voir toute la bdd</a></li>
       <li><a href = "service_managed.php">Services Managed</a></li>
+      <li><a href = "rules_anchor.txt" target="_blank">Voir le fichier rules_anchor</a></li>
     </ul>
 
   </body>
