--- a/interfaceWeb/index.html
+++ b/interfaceWeb/index.html
@@ -7,11 +7,11 @@
   </head>
 
   <body>
-    <h1>Bienvenue sur cette belle page d'accueil</h1>
+    <h1>Bienvenue sur l'interface Web du Scanner</h1>
 
-    <ul>
-      <li><a href = "toute_la_bdd.php">Voir toute la bdd</a></li>
-      <li><a href = "service_managed.php">Services Managed</a></li>
+    <ul id="mainpage">
+      <li><a href = "toute_la_bdd.php">Voir l'ensemble des services scannés</a></li>
+      <li><a href = "service_managed.php">Voir les services managés</a></li>
       <li><a href = "rules_anchor.txt" target="_blank">Voir le fichier rules_anchor</a></li>
     </ul>
 
